--- a/package.json
+++ b/package.json
@@ -52,7 +52,10 @@
     "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
+    "react-easy-crop": "^5.4.2",
     "react-hook-form": "^7.54.1",
+    "react-image-crop": "^10.1.8",
+    "react-modal": "^3.16.3",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.0",
     "sonner": "^1.7.1",
