--- a/package.json
+++ b/package.json
@@ -39,18 +39,20 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@supabase/supabase-js": "^2.50.2",
     "autoprefixer": "^10.4.20",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
     "date-fns": "^3.3.1",
     "embla-carousel-react": "8.5.1",
-    "firebase": "^11.9.1",
-    "framer-motion": "^12.19.2",
+    "firebase": "^11.10.0",
+    "framer-motion": "^12.20.5",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^5.4.2",
