--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "firebase": "^11.10.0",
     "framer-motion": "^12.20.5",
     "input-otp": "1.4.1",
+    "jspdf": "^3.0.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
     "next-themes": "^0.4.4",
@@ -68,6 +69,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/jspdf": "^1.3.3",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
