--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^3.3.1",
     "embla-carousel-react": "8.5.1",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "framer-motion": "^12.20.5",
     "input-otp": "1.4.1",
     "jspdf": "^3.0.1",
